# cube-solver-with-DoosanE0509-ver2

./: .gitignore  README.md
docs/: TEST_COMMANDS.md  cube_robot_action_분배_설명서.docx  cube_solver_node_spec.docx
src/cube_interfaces/: CMakeLists.txt  README.md  package.xml
src/cube_interfaces/cube_orchestrator/srv/: StartScan.srv  StartSolve.srv
src/cube_interfaces/cube_perception/srv/: ExtractFace.srv  GetCubeState.srv
src/cube_interfaces/cube_robot_action/action/: GoHome.action  PickupCube.action  PlaceOnJig.action  RotateCubeForFace.action
src/cube_interfaces/rh_p12_rna_controller/action/: SafeGrasp.action
src/cube_interfaces/rh_p12_rna_controller/msg/: GripperState.msg
src/cube_interfaces/rh_p12_rna_controller/srv/: GetState.srv  SetPosition.srv
src/cube_orchestrator/: README.md  package.xml  setup.cfg  setup.py
src/cube_orchestrator/cube_orchestrator/: master_orchestrator_node.py
src/cube_orchestrator/launch/: full_stack.launch.py  orchestrator.launch.py
src/cube_orchestrator/scripts/: master_orchestrator_node
src/cube_perception/: CMakeLists.txt  README.md  package.xml  setup.py
src/cube_perception/config/: calibration.yaml
src/cube_perception/cube_perception/: __init__.py  color_extraction_node.py  debug_viewer_node.py  service_tester_gui_node.py  vla_detection_node.py
src/cube_perception/cube_perception/detection/: __init__.py  base.py  gemini_vla_backend.py  opencv_depth_backend.py
src/cube_perception/cube_perception/prompts/: __init__.py  gemini_detect_prompt.txt  gemini_state_prompt.txt
src/cube_perception/launch/: perception_stack.launch.py
src/cube_perception/scripts/: color_extraction_node  debug_viewer_node  service_tester_gui_node  vla_detection_node
src/cube_perception/srv/: DetectCubePose.srv
src/cube_robot_action/: README.md  package.xml  setup.cfg  setup.py
src/cube_robot_action/action/: ExecuteSolveToken.action
src/cube_robot_action/cube_robot_action/: action_client_node.py  motion_library.py  robot_action_server_node.py
src/cube_robot_action/scripts/: robot_action_server_node
src/cube_webui/: README.md  package.xml  setup.cfg  setup.py
src/cube_webui/cube_webui/: server.py
src/cube_webui/cube_webui/static/: app.js  index.html  style.css
src/cube_webui/launch/: webui.launch.py
src/rh_p12_rna_controller/: CMakeLists.txt  README.md  README2.md  package.xml  setup.cfg  setup.py
src/rh_p12_rna_controller/rh_p12_rna_controller/: gripper_node.py  gripper_service_node.py
src/rh_p12_rna_controller_interfaces/: CMakeLists.txt  package.xml
