<?xml version="1.0"?>
<package format="3">
  <name>cube_interfaces</name>
  <version>0.1.0</version>
  <description>Unified ROS2 interface package for the cube solver system</description>
  <maintainer email="hhyukjin@todo.todo">hhyukjin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <depend>unique_identifier_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
