<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cube_webui</name>
  <version>0.1.0</version>
  <description>FastAPI-based web UI for the cube solver: live FSM state, camera stream, controls, face color grid, kociemba token preview, manual token execution and fault log.</description>
  <maintainer email="hhyukjin@todo.todo">hhyukjin</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>cube_interfaces</exec_depend>
  <exec_depend>cube_orchestrator</exec_depend>
  <exec_depend>cube_robot_action</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <!-- pip: fastapi, uvicorn, opencv-python -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
