<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rh_p12_rna_controller</name>
  <version>0.1.0</version>
  <description>ROS 2 Action 기반 RH-P12-RN(A) 그리퍼 제어 노드</description>
  <maintainer email="cube@todo.com">cube_team</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>dsr_msgs2</exec_depend>
  <exec_depend>cube_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
